# mingling

./: CHANGELOG.md  Cargo.toml  README.md  check_all.sh  run-tools.ps1  run-tools.sh
dev_tools/: Cargo.toml
dev_tools/scripts/: build-all.ps1  build-all.sh  clippy-all.sh  clippy-fix-all.sh  clippy-fix.ps1  clippy-fix.sh  clippy.ps1  clippy.sh  http-page-preview.ps1  http-page-preview.sh
docs/: README.md  TRANSLATION_RULE.md  _sidebar.md  index.html
docs/css/: vue.css
docs/pages/: 1-get-started.md  1-get-started_zh_CN.md  2-basic.md  3-features.md
docs/pages/2-basic/: 1-program.md  2-setup.md  3-dispatcher.md  4-chain.md  5-renderer.md
docs/pages/3-features/: 1-parser.md  2-general-renderer.md  3-comp.md  4-async.md  5-clap-parser.md
docs/res/: guide.txt
docs/res/changlog_examples/: feat_program_res.rs
examples/example-async/: Cargo.toml
examples/example-async/src/: main.rs
examples/example-basic/: Cargo.toml
examples/example-basic/src/: main.rs
examples/example-completion/: Cargo.toml
examples/example-completion/src/: main.rs
examples/example-general-renderer/: Cargo.toml
examples/example-general-renderer/src/: main.rs
examples/example-picker/: Cargo.toml
examples/example-picker/src/: main.rs
mingling/: Cargo.toml  README.md
mingling/src/: any.rs  comp.rs  example_docs.rs  example_docs.rs.tmpl  input.rs  lib.rs  parser.rs  program.rs  renderer.rs
mingling/src/asset/: chain.rs  dispatcher.rs
mingling/src/input/: input_field.rs
mingling/src/parser/: args.rs  picker.rs
mingling/src/parser/picker/: bools.rs  builtin.rs
mingling/src/program/: config.rs  exec.rs  flag.rs  hint.rs  setup.rs
mingling/src/program/exec/: error.rs
mingling/src/program/setup/: basic.rs
mingling/src/renderer/: render_result.rs
mingling_cli/: Cargo.toml  MingLing.toml  build.rs
mingling_cli/src/: add_dispatcher.rs  dispatcher_mgr.rs  main.rs
mingling_core/: Cargo.toml
mingling_core/src/: any.rs  asset.rs  builds.rs  debug.rs  lib.rs  markers.rs  program.rs  renderer.rs
mingling_core/src/any/: group.rs
mingling_core/src/asset/: chain.rs  comp.rs  dispatcher.rs  enum_tag.rs  global_resource.rs  help.rs  node.rs  renderer.rs
mingling_core/src/asset/chain/: error.rs
mingling_core/src/asset/comp/: flags.rs  shell_ctx.rs  suggest.rs
mingling_core/src/builds/: comp.rs
mingling_core/src/markers/: group_process.rs  next_process.rs  this_program.rs
mingling_core/src/program/: config.rs  exec.rs  flag.rs  setup.rs  string_vec.rs
mingling_core/src/program/exec/: error.rs
mingling_core/src/program/setup/: basic.rs  general_renderer.rs
mingling_core/src/renderer/: general.rs  render_result.rs
mingling_core/src/renderer/general/: error.rs
mingling_core/tmpls/comps/: bash.sh  fish.fish  pwsh.ps1  pwsl.ps1  zsh.zsh
mingling_macros/: Cargo.toml
mingling_macros/src/: README.txt  chain.rs  chain_struct.rs  completion.rs  dispatcher.rs  dispatcher_chain.rs  dispatcher_clap.rs  enum_tag.rs  groupped.rs  help.rs  lib.rs  node.rs  pack.rs  program_setup.rs  render.rs  renderer.rs  suggest.rs
mling/: Cargo.toml
mling/res/: guide.txt  help-mling.txt
mling/src/: cli.rs  display.rs  main.rs  namespace_manager.rs  project_installer.rs  project_solver.rs
mling/src/cli/: install.rs  list.rs  namespace_mgr.rs  read.rs  refresh.rs
mling/tmpl/: load.fish  load.ps1  load.sh
res/: graph.drawio  guide.txt
src/: guide.txt  main.rs
