[package]
name = "mingling_workspace"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "examples/example-async",
    "mingling",
    "mingling_core",
    "mingling_macros",
]
exclude = [
    "dev_tools",
    "examples/example-async",
    "examples/example-basic",
    "examples/example-completion",
    "examples/example-general-renderer",
    "examples/example-picker",
]

[dependencies]
