[package]
name = "mingling"
version = "0.1.4"
edition = "2024"
authors = ["Weicao-CatilGrass"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A procedural command-line framework with subcommand support"
keywords = ["cli", "framework", "procedural", "subcommand", "command-line"]
categories = ["command-line-interface"]
repository = "https://github.com/catilgrass/mingling"

[dev-dependencies]
mingling = { path = ".", features = ["full"] }

[features]
default = ["mingling_core/default"]
full = ["mingling_core/full", "general_renderer", "parser"]
general_renderer = [
    "mingling_core/general_renderer",
    "dep:serde",
    "mingling_macros/general_renderer",
]

parser = ["dep:size"]

[dependencies]
mingling_core = { path = "../mingling_core", default-features = false }
mingling_macros = { path = "../mingling_macros", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
size = { version = "0.5", optional = true }
