[package]
name = "mingling"
version = "0.1.6"
edition = "2024"
authors = ["Weicao-CatilGrass"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "The Rust CLI Framework"
keywords = ["cli", "framework", "procedural", "subcommand", "command-line"]
categories = ["command-line-interface"]
repository = "https://github.com/catilgrass/mingling"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mingling = { path = ".", features = ["full"] }

[features]
debug = ["mingling_core/debug"]
async = ["mingling_core/async", "mingling_macros/async"]
default = ["mingling_core/default"]
full = ["mingling_core/full", "mingling_macros/full", "comp", "parser"]
general_renderer = [
    "mingling_core/general_renderer",
    "dep:serde",
    "mingling_macros/general_renderer",
]

comp = ["mingling_core/comp", "mingling_macros/comp"]
parser = ["dep:size"]

[dependencies]
mingling_core = { version = "0.1.6", default-features = false }
mingling_macros = { version = "0.1.6", default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
size = { version = "0.5", optional = true }
