[package]
name = "mingling_core"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core of the mingling library"
repository = "https://github.com/catilgrass/mingling"

[features]
full = ["macros", "general_renderer"]
default = ["macros"]
macros = ["mingling_macros"]
general_renderer = ["dep:serde", "mingling_macros/serde"]

[dependencies]
mingling_macros = { version = "0.1.1", optional = true }
just_fmt = "0.1.2"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
