[package]
name = "mingling_core"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core of the mingling library"
repository = "https://github.com/catilgrass/mingling"

[features]
default = []
full = ["general_renderer"]
general_renderer = ["dep:serde"]

[dependencies]
just_fmt = "0.1.2"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2"
tokio = { version = "1", features = ["io-std", "io-util"] }
