[package]
name = "example-general-renderer"
version = "0.0.1"
edition = "2024"

[dependencies]
mingling = { path = "../../mingling", features = [
    "parser",
    "general_renderer",
] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
